# rocket_diesel_demo

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs  schema.rs
src/controllers/: account.rs
src/models/: account.rs
src/repositories/: account.rs
