[package]
name = "rocket_diesel_demo"
version = "0.1.0"
authors = ["bgfist <bgfist.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["diesel_mysql_pool"]}
diesel = { version = "1.4.3", features = ["extras"] }
chrono = "0.4.10"